Fix menu list, item on tablets and phones devices

--- a/src/sass/mixins/menu-block.scss
+++ b/src/sass/mixins/menu-block.scss
@@ -33,9 +33,14 @@
 		justify-content: center;
 		align-items: center;
 		margin-bottom: 40px;
-		@include phones {
-			margin-left: 24px;
+		@include tablets {
 			flex-wrap: wrap;
+			width: 460px;
+			margin: 0 auto;
+		}
+		@include phones {
+			width: 300px;
+			margin: 0 auto;
 		}
 		&:after {
 			content: "";
@@ -48,6 +53,9 @@
 			background: url("./img/menu/border-dashed.png");
 			background-repeat: repeat-x;
 			z-index: -1;
+			@include tablets {
+				margin-top: 70px;
+			}
 			@include phones {
 				margin-top: 75px;
 			}
@@ -98,10 +106,21 @@
 		justify-content: center;
 		margin-right: 53.5px;
 		@include tablets {
-			margin-right: 20px;
+			margin-right: 23px;
+			margin-left: 23px;
+			margin-bottom: 20px;
+		}
+		@include phones {
+			margin: 0px 15px 15px;
 		}
 		&:last-child {
 			margin-right: 0px;
+			@include tablets {
+				margin-right: 23px;
+			}
+			@include phones {
+				margin-right: 15px;
+			}
 		}
 		&:hover .menu__link-text {
 			color: $orange;
@@ -221,17 +240,17 @@
 			}
 			&-sign {
 				display: inline-block;
-				font-size: 25px;
+				font-size: 15px;
 				vertical-align: middle;
 				margin-top: -10px;
 				@include laptops {
-					font-size: 18px;
+					font-size: 14px;
 				}
 				@include tablets {
-					font-size: 16px;
+					font-size: 12px;
 				}
 				@include phones {
-					font-size: 14.5px;
+					font-size: 11px;
 				}
 			}
 		}
